public class PizzaCustomStyleBrest extends Pizza {
    public PizzaCustomStyleBrest(){
        this.nom = "Pizza Personnalisée de Brest";
    }
}
