public class PizzaCustomStyleStrasbourg extends Pizza {
    public PizzaCustomStyleStrasbourg(){
        this.nom = "Pizza Personnalisé de Strasbourg";
    }
}
