

public abstract class PizzaFactory {
	protected abstract Pizza  creerPizza(String type);

}
