public class PizzaFromageStyleBrest extends Pizza {
    public PizzaFromageStyleBrest(){
        this.nom = "Pizza Fromage de Brest";
    }
}
