public class PizzaFromageStyleStrasbourg extends Pizza{
    public PizzaFromageStyleStrasbourg(){
        this.nom = "Pizza Fromage de Strasbourg";
    }
}
