public class PizzaSavoyardeStyleBrest extends Pizza {
    public PizzaSavoyardeStyleBrest(){
        this.nom = "Pizza Savoyarde de Brest";
    }
}
