public class PizzaSavoyardeStyleStrasbourg extends Pizza {
    public PizzaSavoyardeStyleStrasbourg(){
        this.nom = "Pizza Savoyarde de Strasbourg";
    }
}
